samples/map/invalid/R6.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="initial.dita" collection-type="family"/>
  <reltable><relrow><relcell/></relrow></reltable>
  <reltable><relrow><relcell/></relrow></reltable>
</map>